# python-praxiskurs

./: README.md
Examples/CrazyEights/: pyproject.toml  setup.cfg  tox.ini
Examples/CrazyEights/src/crazyeights/interactive/: player.py
Examples/CrazyEightsSimple/: pyproject.toml  setup.cfg  tox.ini
Examples/CrazyEightsSk/: pyproject.toml  setup.cfg  tox.ini
Folien/Html/Code-Along/06 Fehlerbehandlung/: 08 Warnungen.html  test_warnings.py
Folien/Html/Code-Along/07 Module und Packages/: 04 Reload von Modulen.html  06 Packages.html
Folien/Html/Code-Along/08 Architektur und Design/: 01 Einführung in Objektorientierung.html  04 GRASP Pattern Creator.html
Folien/Html/Completed/03 Daten- und Kontrollstrukturen/: 02 Import von Modulen.html
Folien/Html/Completed/06 Fehlerbehandlung/: 08 Warnungen.html
Folien/Html/Completed/07 Module und Packages/: 01 Module und Packages.html  02 Benutzerdefinierte Module.html  04 Reload von Modulen.html  05 Module und Kommandozeile.html  06 Packages.html
Folien/Html/Completed/08 Architektur und Design/: 04 GRASP Pattern Creator.html  05 GRASP Informationsexperte.html
Folien/Notebooks/Code-Along/06 Fehlerbehandlung/: 08 Warnungen.ipynb
Folien/Notebooks/Code-Along/07 Module und Packages/: 04 Reload von Modulen.ipynb  06 Packages.ipynb
Folien/Notebooks/Code-Along/08 Architektur und Design/: 01 Einführung in Objektorientierung.ipynb  02 Domänenmodelle.ipynb  04 GRASP Pattern Creator.ipynb  05 GRASP Informationsexperte.ipynb
Folien/Notebooks/Completed/04 Daten- und Kontrollstrukturen (Teil 2)/: 05 Zuweisung an Slices.ipynb
Folien/Notebooks/Completed/06 Fehlerbehandlung/: 08 Warnungen.ipynb
(+8 files in other folders)
